package com.ecms.entity;

public enum PrescriptionStatus {
    PENDING,
    DISPENSED,
    SKIPPED
}
