@startuml UC36_FabricateEyeglasses_ClassDiagram

skinparam classAttributeIconSize 0
skinparam monochrome false
skinparam backgroundColor white
skinparam roundcorner 5
skinparam class {
    BackgroundColor #f9f9f9
    ArrowColor #336699
    BorderColor #336699
}

class EyeglassPrescriptionController {
    + getPendingPrescriptions(): ResponseEntity<ApiResponse<List<EyeglassPrescriptionResponse>>>
    + dispensePrescription(id: Long, userDetails: UserDetails): ResponseEntity<ApiResponse<EyeglassPrescriptionResponse>>
}

interface EyeglassPrescriptionService {
    + getPendingPrescriptions(): List<EyeglassPrescriptionResponse>
    + dispensePrescription(id: Long): EyeglassPrescriptionResponse
}

class EyeglassPrescriptionServiceImpl {
    + getPendingPrescriptions(): List<EyeglassPrescriptionResponse>
    + dispensePrescription(id: Long): EyeglassPrescriptionResponse
}

class EyeglassPrescriptionRepository {
    + findByStatus(status: PrescriptionStatus): List<EyeglassPrescription>
    + findById(id: Long): EyeglassPrescription
    + save(prescription: EyeglassPrescription): EyeglassPrescription
}

class NotificationService {
    + notify(recipient: String, message: String): void
}

class AuditLog {
    + logAction(action: String, details: String): void
}

class EyeglassPrescription {
    - prescriptionId: Long
    - medicalRecordId: Long
    - status: PrescriptionStatus
    - issuedDate: LocalDateTime
    + getPrescriptionId(): Long
    + getStatus(): PrescriptionStatus
    + setStatus(status: PrescriptionStatus): void
}

enum PrescriptionStatus {
    PENDING
    DISPENSED
    SKIPPED
}

class EyeglassPrescriptionResponse {
    - prescriptionId: Long
    - status: String
    - issuedDate: LocalDateTime
}

class ApiResponse<T> {
    - status: int
    - message: String
    - data: T
}

EyeglassPrescriptionController ..> EyeglassPrescriptionService : uses
EyeglassPrescriptionController ..> ApiResponse : creates
EyeglassPrescriptionService <|.. EyeglassPrescriptionServiceImpl : implements
EyeglassPrescriptionServiceImpl ..> EyeglassPrescriptionRepository : uses
EyeglassPrescriptionServiceImpl ..> NotificationService : uses
EyeglassPrescriptionServiceImpl ..> AuditLog : uses
EyeglassPrescriptionServiceImpl ..> EyeglassPrescriptionResponse : creates

EyeglassPrescriptionRepository ..> EyeglassPrescription : manages
EyeglassPrescription "1" -- "1" PrescriptionStatus : uses >

@enduml
